feat: implement account API
